Setup docker and db config

--- a/backend/config/mongoid.yml
+++ b/backend/config/mongoid.yml
@@ -1,5 +1,19 @@
 development:
   clients:
     default:
-      uri: mongodb://root:password@mongodb:27017/rails_db
+      database: backend_development
+      hosts:
+        - localhost:27017
+      options:
+        server_selection_timeout: 5
 
+test:
+  clients:
+    default:
+      database: backend_test
+      hosts:
+        - localhost:27017
+      options:
+        read:
+          mode: :primary
+        max_pool_size: 1
