--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -36,6 +36,8 @@ group :development, :test do
   # Static analysis for security vulnerabilities [https://brakemanscanner.org/]
   gem "brakeman", require: false
 
+  gem "listen", "~> 3.7"
+
   gem "rubocop", require: false
 
   # Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
