Added unit test for CRUD
Tests created:
+ adding user to db
+ check if user already exists (conflict)
+ not adding user with wrong parameters

+ rspec config for tests

--- a/backend/config/mongoid.yml
+++ b/backend/config/mongoid.yml
@@ -8,9 +8,7 @@ development:
 test:
   clients:
     default:
-      database: backend_test
-      hosts:
-        - localhost:27017
+      uri: <%= ENV['DATABASE_URL'] %>
       options:
         read:
           mode: :primary
