--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -4,13 +4,6 @@ source "https://rubygems.org"
 gem "rails", "~> 8.0.1"
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", ">= 5.0"
-# Build JSON APIs with ease [https://github.com/rails/jbuilder]
-# gem "jbuilder"
-# Use Redis adapter to run Action Cable in production
-# gem "redis", ">= 4.0.1"
-
-# Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
-# gem "bcrypt", "~> 3.1.7"
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ windows jruby ]
@@ -28,9 +21,9 @@ gem "mongoid"
 
 gem "dotenv-rails", groups: [ :development, :test ]
 
-gem "bcrypt"
+gem "factory_bot_rails"
 
-gem "rspec-rails", "~> 5.0"
+gem "bcrypt"
 
 gem "jwt"
 
@@ -41,6 +34,9 @@ group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
 
+  gem "rspec-rails", "~> 5.0"
+
+  gem "database_cleaner-mongoid"
   # Static analysis for security vulnerabilities [https://brakemanscanner.org/]
   gem "brakeman", require: false
 
