Adjusted rubocop config and added some more validation on the model side
~ adjusted denting in rubocop
+ added name length mininum and maximum

--- a/backend/.rubocop.yml
+++ b/backend/.rubocop.yml
@@ -1,8 +1,21 @@
 # Omakase Ruby styling for Rails
 inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 
-# Overwrite or add rules to create your own house style
-#
+Layout/IndentationWidth:
+  Enabled: true
+  Width: 2
+
+Layout/BlockAlignment:
+  EnforcedStyleAlignWith: start_of_line
+
+Layout/EndAlignment:
+  EnforcedStyleAlignWith: variable
+
+Layout/FirstParameterIndentation:
+  EnforcedStyle: consistent
+
+Layout/IndentationConsistency:
+  Enabled: true
 # # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
 # Layout/SpaceInsideArrayLiteralBrackets:
 #   Enabled: false
