--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -25,6 +25,8 @@ gem "factory_bot_rails"
 
 gem "bcrypt"
 
+gem "jsonapi-serializer"
+
 gem "jwt"
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin Ajax possible
