--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -36,6 +36,12 @@ group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
 
+  gem "ruby-lsp"
+
+  gem "solargraph"
+
+  gem "solargraph-rails"
+
   gem "rspec-rails", "~> 5.0"
 
   gem "database_cleaner-mongoid"
