--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-switch": "^7.1.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
