--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "react-spinners": "^0.15.0",
     "react-switch": "^7.1.0",
-    "yup": "^1.6.1",
-    "zustand": "^5.0.2"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
