--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@eslint/js": "^9.17.0",
     "@types/react": "19",
     "@types/react-dom": "19",
+    "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
