--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rails/actioncable": "^8.0.100",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
@@ -28,7 +30,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.14",
+    "@types/node": "^22.10.7",
+    "@types/rails__actioncable": "^6.1.11",
     "@types/react": "19",
     "@types/react-dom": "19",
     "@types/react-window": "^1.8.8",
