--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,28 @@ frontend/.yarnclean
 frontend/.env
 backend/app/assets/builds/.keep
 backend/vendor/javascript/.keep
+
+/_build/
+
+/cover/
+
+/deps/
+
+/doc/
+
+/.fetch
+erl_crash.dump
+
+*.ez
+
+/tmp/
+
+chat-*.tar
+
+/priv/static/assets/
+
+/priv/static/cache_manifest.json
+
+npm-debug.log
+/assets/node_modules/
+
