Just to make sure another batch

--- a/.gitignore
+++ b/.gitignore
@@ -38,27 +38,17 @@ frontend/.env
 backend/app/assets/builds/.keep
 backend/vendor/javascript/.keep
 
-/_build/
-
-/cover/
-
-/deps/
-
-/doc/
-
-/.fetch
-erl_crash.dump
-
-*.ez
-
-/tmp/
-
-chat-*.tar
-
-/priv/static/assets/
-
-/priv/static/cache_manifest.json
-
-npm-debug.log
-/assets/node_modules/
-
+chat/_build
+chat/deps
+chat/cover
+chat/doc
+chat/node_modules
+chat/priv/static/assets
+chat/priv/static/cache_manifest.json
+chat/priv/static/css
+chat/priv/static/js
+chat/priv/static/images
+chat/priv/static/fonts
+chat/assets/node_modules
+chat/.env
+chat/priv/repo/seeds.exs
